<?xml version="1.0"?>
<package format="3">
  <name>yp_launch</name>
  <version>0.0.1</version>
  <description>The yp_launch package</description>
  <maintainer email="s12400148@gmail.com">ShigekiKobayashi</maintainer>
  <author>Shigeki Kobayashi</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>velodyne_driver</depend>
  <depend>velodyne_pointcloud</depend>
  <depend>urg_node</depend>
  <depend>usb_cam</depend>

  <export>

  </export>
</package>
